--- a/src/Directory.Build.targets
+++ b/src/Directory.Build.targets
@@ -52,6 +52,10 @@
     </Otherwise>
   </Choose>
 
+  <ItemGroup>
+    <None Remove="**\*.DotSettings" />
+  </ItemGroup>
+
   <ItemGroup Condition="Exists('$(MSBuildProjectDirectory)\packages.lock.json')">
     <Content Remove="packages.lock.json" />
     <None Remove="packages.lock.json" />
