--- a/src/Diginsight.Analyzer.Business.Abstractions/Diginsight.Analyzer.Business.Abstractions.csproj
+++ b/src/Diginsight.Analyzer.Business.Abstractions/Diginsight.Analyzer.Business.Abstractions.csproj
@@ -5,8 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Azure.Storage.Blobs" Version="12.*" />
-    <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.*" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="8.*" />
   </ItemGroup>
 
   <ItemGroup>
