Creating Analyzer projects

--- a/src/Diginsight.Analyzer.Common/Diginsight.Analyzer.Common.csproj
+++ b/src/Diginsight.Analyzer.Common/Diginsight.Analyzer.Common.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Diginsight.Diagnostics" Version="$(DiginsightCoreVersion)" />
+    <PackageReference Include="System.Linq.Async" Version="6.*" />
   </ItemGroup>
 
 </Project>
